--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nuxtjs/supabase": "^0.3.1",
     "@nuxtjs/tailwindcss": "^6.4.1",
     "@nuxtjs/web-vitals": "^0.2.2",
+    "netlify-cli": "^13.0.1",
     "nuxt": "^3.2.3"
   },
   "dependencies": {
